crates/schemalint/tests/snapshots/snapshot_tests__emit_sarif_edge_cases.snap
---
source: crates/schemalint/tests/snapshot_tests/part_02.rs
expression: output
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "special.json"
                },
                "region": {
                  "startColumn": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "contains <xml> & \"quotes\" 'single'"
          },
          "ruleId": "TST-XML"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "special.json"
                }
              }
            }
          ],
          "message": {
            "text": ""
          },
          "ruleId": "TST-EMPTY"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://1nder-labs.github.io/schemalint",
          "name": "schemalint",
          "rules": [
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules",
              "id": "TST-EMPTY"
            },
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules",
              "id": "TST-XML"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
