crates/schemalint/tests/snapshots/snapshot_tests__emit_sarif_empty.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: output
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [],
      "tool": {
        "driver": {
          "informationUri": "https://1nder-labs.github.io/schemalint",
          "name": "schemalint",
          "rules": []
        }
      }
    }
  ],
  "version": "2.1.0"
}
