crates/schemalint/tests/snapshots/snapshot_tests__emit_sarif_multi_diag.snap
---
source: crates/schemalint/tests/snapshot_tests/part_02.rs
expression: output
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "schema.json"
                },
                "region": {
                  "startColumn": 8,
                  "startLine": 42
                }
              }
            }
          ],
          "message": {
            "text": "keyword 'allOf' not supported"
          },
          "ruleId": "OAI-K-allOf"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "schema.json"
                }
              }
            }
          ],
          "message": {
            "text": "keyword 'anyOf' is a warning"
          },
          "ruleId": "OAI-K-anyOf"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://1nder-labs.github.io/schemalint",
          "name": "schemalint",
          "rules": [
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules/keyword/allOf",
              "id": "OAI-K-allOf"
            },
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules/keyword/anyOf",
              "id": "OAI-K-anyOf"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
