crates/schemalint/tests/snapshots/snapshot_tests__emit_sarif_source_variants.snap
---
source: crates/schemalint/tests/snapshot_tests/part_02.rs
expression: output
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "variants.json"
                },
                "region": {
                  "startColumn": 5,
                  "startLine": 10
                }
              }
            }
          ],
          "message": {
            "text": "full span with line and col"
          },
          "ruleId": "TST-FULL"
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "variants.json"
                },
                "region": {
                  "startLine": 20
                }
              }
            }
          ],
          "message": {
            "text": "line only, no col"
          },
          "ruleId": "TST-LINEONLY"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "variants.json"
                }
              }
            }
          ],
          "message": {
            "text": "no source span at all"
          },
          "ruleId": "TST-NOSOURCE"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://1nder-labs.github.io/schemalint",
          "name": "schemalint",
          "rules": [
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules",
              "id": "TST-FULL"
            },
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules",
              "id": "TST-LINEONLY"
            },
            {
              "helpUri": "https://1nder-labs.github.io/schemalint/rules",
              "id": "TST-NOSOURCE"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
