crates/schemalint/tests/snapshots/snapshot_tests__snapshot_gha_forbidden_keyword.snap
---
source: crates/schemalint/tests/snapshot_tests.rs
expression: "normalize_temp_paths(&stdout, dir.path())"
---
::error file=[TEMP_DIR]/schema.json,title=TEST-K-allOf::keyword 'allOf' is not supported by test [profile: test]
