crates/schemalint/tests/snapshots/snapshot_tests__snapshot_human_forbidden_keyword.snap
---
source: crates/schemalint/tests/snapshot_tests/part_01.rs
expression: "normalize_temp_paths(&stdout, dir.path())"
---
error[TEST-K-allOf]: keyword 'allOf' is not supported by test
   --> [TEMP_DIR]/schema.json
     |
     = profile: test
     = schema path: (root)
     = hint: merge the 'allOf' branches into one object schema: combine their 'properties' and 'required' lists and drop the 'allOf'.
     = see: https://1nder-labs.github.io/schemalint/rules/keyword/allOf

1 issue found (1 error, 0 warnings) across 1 schema in [DURATION]ms
coverage complete (1 attempted, 0 excluded, 1 discovered, 1 checked, 0 failed)
