crates/schemalint/tests/snapshots/snapshot_tests__snapshot_human_warning_only.snap
---
source: crates/schemalint/tests/snapshot_tests/part_01.rs
expression: "normalize_temp_paths(&stdout, dir.path())"
---
warning[TEST-K-uniqueItems]: keyword 'uniqueItems' is not supported by test
   --> [TEMP_DIR]/schema.json
     |
     = profile: test
     = schema path: (root)
     = hint: test may ignore or strip 'uniqueItems'. Do not rely on it; check the constraint in your own code after the model responds.
     = see: https://1nder-labs.github.io/schemalint/rules/keyword/uniqueItems

1 issue found (0 errors, 1 warning) across 1 schema in [DURATION]ms
coverage complete (1 attempted, 0 excluded, 1 discovered, 1 checked, 0 failed)
