crates/schemalint/tests/snapshots/snapshot_tests__snapshot_json_batch_with_errors.snap
---
source: crates/schemalint/tests/snapshot_tests/part_01.rs
expression: "normalize_temp_paths(&stdout, dir.path())"
---
{
  "schema_version": "1.3",
  "tool": {
    "name": "schemalint",
    "version": "[version]"
  },
  "profiles": [
    "test"
  ],
  "summary": {
    "total_issues": 1,
    "errors": 1,
    "warnings": 0,
    "schemas_checked": 2,
    "duration_ms": [DURATION]
  },
  "diagnostics": [
    {
      "code": "TEST-K-allOf",
      "severity": "error",
      "message": "keyword 'allOf' is not supported by test",
      "pointer": "",
      "source": {
        "file": "[TEMP_DIR]/a.json"
      },
      "profile": "test",
      "hint": "merge the 'allOf' branches into one object schema: combine their 'properties' and 'required' lists and drop the 'allOf'.",
      "seeUrl": "https://1nder-labs.github.io/schemalint/rules/keyword/allOf"
    }
  ],
  "report": {
    "coverage": {
      "attempted": 2,
      "checked": 2,
      "discovered": 2,
      "excluded": 0,
      "failed": 0,
      "status": "complete"
    },
    "failures": [],
    "success": false,
    "targets": [
      {
        "canonical_kind": "json-schema",
        "effective_profiles": [
          "test"
        ],
        "envelope": {},
        "module_path": "[TEMP_DIR]/a.json",
        "name": "",
        "provider": {
          "certainty": "ambiguous"
        },
        "status": "checked",
        "usage_span": {
          "file": "[TEMP_DIR]/a.json"
        }
      },
      {
        "canonical_kind": "json-schema",
        "effective_profiles": [
          "test"
        ],
        "envelope": {},
        "module_path": "[TEMP_DIR]/b.json",
        "name": "",
        "provider": {
          "certainty": "ambiguous"
        },
        "status": "checked",
        "usage_span": {
          "file": "[TEMP_DIR]/b.json"
        }
      }
    ],
    "warnings": []
  }
}
