crates/schemalint/tests/snapshots/snapshot_tests__snapshot_json_clean_schema.snap
---
source: crates/schemalint/tests/snapshot_tests/part_01.rs
expression: "normalize_temp_paths(&stdout, dir.path())"
---
{
  "schema_version": "1.3",
  "tool": {
    "name": "schemalint",
    "version": "[version]"
  },
  "profiles": [
    "test"
  ],
  "summary": {
    "total_issues": 0,
    "errors": 0,
    "warnings": 0,
    "schemas_checked": 1,
    "duration_ms": [DURATION]
  },
  "diagnostics": [],
  "report": {
    "coverage": {
      "attempted": 1,
      "checked": 1,
      "discovered": 1,
      "excluded": 0,
      "failed": 0,
      "status": "complete"
    },
    "failures": [],
    "success": true,
    "targets": [
      {
        "canonical_kind": "json-schema",
        "effective_profiles": [
          "test"
        ],
        "envelope": {},
        "module_path": "[TEMP_DIR]/schema.json",
        "name": "",
        "provider": {
          "certainty": "ambiguous"
        },
        "status": "checked",
        "usage_span": {
          "file": "[TEMP_DIR]/schema.json"
        }
      }
    ],
    "warnings": []
  }
}
